6_ingress/ingress-ic-webapp.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ic-webapp-ingress
  namespace: icgroup
  labels:
    env: prod
    type: ingress
    createur: capgemini
spec:
  rules:
  - host: <my_public_dns>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterip-ic-webapp
            port:
              number: 80
